--- a/data/css/basedcooking.css
+++ b/data/css/basedcooking.css
@@ -5,7 +5,7 @@ body {
 	margin: auto ;
 	padding: 0 16px ;
 	margin-bottom: 500px ;
-    font-family: 'Libertinus';
+	font-family: sans-serif ;
 }
 
 a {
