--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,11 @@
     <a href="./rss.xml">RSS</a>  ·
     <a href="./atom.xml">atom</a>
     <br>
-    <p>Hui-Jun Chen · <a href="https://github.com/huijunchen9260">GitHub</a></p>
+    <p>
+        Hui-Jun Chen ·
+        <a href="https://github.com/huijunchen9260">GitHub</a> ·
+        Last Modified: $DATE_EDITED
+    </p>
     <p><small>Powered by <a href="https://pedantic.software/git/blogit">blogit</a></small></p>
 </footer>
 </body></html>
