--- a/templates/index_header.html
+++ b/templates/index_header.html
@@ -1,6 +1,11 @@
 <div class="banner">
-    <h1>📈 $TITLE 📉</h1>
-
+    <h1>
+        <img src="pix/thefool.svg" alt="thefoolflip"/>
+        $TITLE
+        <img src="pix/thefool.svg" alt="thefool"/>
+    </h1>
     <hr/>
 </div>
-<p>Hui-Jun Chen's Personal Website</p>
+<div style="text-align:center">
+
+</div>
