--- a/templates/tag_index_header.html
+++ b/templates/tag_index_header.html
@@ -1,5 +1,10 @@
 <div class="banner">
-    <h1>📈 $TITLE 📉</h1>
+    <h1>
+        <img src="pix/thefool.svg" alt="thefoolflip"/>
+        $TITLE
+        <img src="pix/thefool.svg" alt="thefool"/>
+    </h1>
     <hr/>
 </div>
+
 <p><i>Filtering tagged:</i> <b>$TAGS</b></p>
