--- a/templates/blog_header.html
+++ b/templates/blog_header.html
@@ -6,7 +6,7 @@
                      <img src="pix/thefool.svg" alt="thefoolflip"/>
                  </td>
                  <td align="center">
-                     Research
+                     Blog
                  </td>
                  <td align="right">
                      <img src="pix/thefool.svg" alt="thefool"/>
