--- a/templates/index_header.html
+++ b/templates/index_header.html
@@ -1,11 +1,20 @@
 <div class="banner">
     <h1>
-        <img src="pix/thefool.svg" alt="thefoolflip"/>
-        $TITLE
-        <img src="pix/thefool.svg" alt="thefool"/>
+        <table border=0 width="100%" ID="Table2" style="margin: 0px;">
+             <tr>
+                 <td align="left">
+                     <img src="pix/thefool.svg" alt="thefoolflip"/>
+                 </td>
+                 <td align="center">
+                     Hui-Jun Chen's Webpage
+                 </td>
+                 <td align="right">
+                     <img src="pix/thefool.svg" alt="thefool"/>
+                     <!-- <input type="checkbox"> -->
+                     <!-- <span class="check"></span> -->
+                 </td>
+             </tr>
+        </table>
     </h1>
     <hr/>
-</div>
-<div style="text-align:center">
-
 </div>
